--- a/push.ui
+++ b/push.ui
@@ -19,27 +19,27 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
@@ -48,27 +48,27 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
@@ -77,32 +77,35 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>20</green>
-        <blue>77</blue>
+        <red>156</red>
+        <green>143</green>
+        <blue>255</blue>
        </color>
       </brush>
      </colorrole>
     </disabled>
    </palette>
+  </property>
+  <property name="focusPolicy">
+   <enum>Qt::ClickFocus</enum>
   </property>
   <property name="contextMenuPolicy">
    <enum>Qt::NoContextMenu</enum>
@@ -111,7 +114,7 @@
    <string>Уведомление</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(0, 20, 77);</string>
+   <string notr="true">background-color: rgb(156, 143, 255);</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="sizeConstraint">
