--- a/main.ui
+++ b/main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1517</width>
-    <height>795</height>
+    <height>792</height>
    </rect>
   </property>
   <property name="palette">
@@ -90,7 +90,7 @@
        <widget class="QPushButton" name="pb_create">
         <property name="minimumSize">
          <size>
-          <width>200</width>
+          <width>100</width>
           <height>50</height>
          </size>
         </property>
@@ -100,7 +100,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Создать канбан</string>
+         <string>Создать</string>
         </property>
        </widget>
       </item>
@@ -108,7 +108,7 @@
        <widget class="QPushButton" name="pb_graph">
         <property name="minimumSize">
          <size>
-          <width>350</width>
+          <width>300</width>
           <height>50</height>
          </size>
         </property>
@@ -126,7 +126,7 @@
        <widget class="QPushButton" name="pb_finance">
         <property name="minimumSize">
          <size>
-          <width>300</width>
+          <width>250</width>
           <height>50</height>
          </size>
         </property>
@@ -137,6 +137,26 @@
         </property>
         <property name="text">
          <string>Финансовая ведомость</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pb_plans">
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>14</pointsize>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Планы</string>
         </property>
        </widget>
       </item>
